# Projet7V2

./: .gitignore  Procfile  api - old local.py  api.py  api2.py  api_pytest.py  best_model_params.json  data_drift.ipynb  data_drift_report.html  datamodel.ipynb  donneestestapi.py  feature_importances.csv  feature_importances_with_type.csv  future_engineering_nonscalés.ipynb  future_engineering_nonscalésdata_test.ipynb  future_engineering_nonscalésdata_train.ipynb  imputer.joblib  lgbm_hyperparameters.json  preprocessV2.ipynb  production_pipeline.ipynb  projet7v4.ipynb  projet7v5.ipynb  projet7v6.ipynb  pyproject.toml  readme.md  render.yaml  requirementV2.txt  requirements.txt  requirementsUTF8.txt  score.py  setup.sh  stream.py  test API Local.ipynb  test streamlit.py  test_predict_valid.py  test_predict_valid_cible.py  testapi.py  train_pipeline.ipynb  trouve_clients_test_uni.py  vpe testnanproduction_pipeline.ipynb
.github/workflows/: deploy.yml
Models/: production_pipeline.ipynb  train_pipeline.ipynb
Script/: Dashboard.py  api.py  api_pytest.py  apidash.py  apidashtest.py  stream.py  test_api.py  test_predict_valid.py  test_predict_valid_cible.py  trouve_clients_test_uni.py
artifacts/: imputer.joblib  lgmb_model.joblib  preprocessing_pipeline.joblib  production_pipeline.joblib  scaler.joblib  testclient.csv
data/: future_engineering_nonscalésdata_test.ipynb  future_engineering_nonscalésdata_train.ipynb  test_client.csv
drift/: data_drift.ipynb  data_drift_report.html
mlartifacts/0/20d092b121d646efa23d9e86cef51a05/artifacts/random_forest_model_top/: MLmodel  (+4 more)
(+36 files in other folders)
