[tool.poetry]
name = "projetgit"
version = "0.1.0"
description = "init"
authors = ["VincentPERRON76 <svennn@hotmail.fr>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
pandas = "2.0.3"
imblearn = "^0.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
mlflow = "^2.17.2"
lightgbm = "^4.5.0"
xgboost = "^2.1.2"
ipywidgets = "^8.1.5"
h2o = "^3.46.0.6"
tdqm = "^0.0.1"
shape = "^0.1.1"
streamlit = "^1.40.2"
pydantic = "^1.10.13"
typing-extensions = "^4.5.0"
evidently = "0.4.0"
numpy = "1.25.0"
shap = "^0.46.0"
optima = "^0.1.2"
optuna = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
